Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-3793

[C++] TestScalarAppendUnsafe is not testing unsafe appends

    XMLWordPrintableJSON

Details

    Description

      In TestScalarAppendUnsafe, AppendNull is called to modify the bitmask which is not unsafe- it reserves at least one more element. UnsafeAppendNull should be used instead.

      Since PoolBuffers round their capacities up to multiples of 64 bytes, no buffer is ever in danger of overflowing in this test anyway. More repetitions should be used so that the test will fail if insufficient storage is allocated. More storage should be allocated in the test, too- currently only a single iteration's worth is allocated.

      Attachments

        Issue Links

          Activity

            People

              bkietz Ben Kietzman
              bkietz Ben Kietzman
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 3h
                  3h