ARROW-3793: [C++] TestScalarAppendUnsafe is not testing unsafe appends

Perform enough repetitions that the Buffers will be more than the minimum allocation size (64 bytes) and reserve enough space for all repetitions. Also use UnsafeAppendNull rather than AppendNull to ensure that nothing is calling Reserve in the test's loop

Author: Benjamin Kietzman <bengilgit@gmail.com>

Closes #2977 from bkietz/master and squashes the following commits:

123b7b697 <Benjamin Kietzman> ArrayBuilder:: methods refactoring
e48f359e1 <Benjamin Kietzman> adding doccomment about downcasting
c041af631 <Benjamin Kietzman> adding explicit cast to int32_t
52b50cdb1 <Benjamin Kietzman> make ArrayBuilder methods which modify bitmap protected
e6f13e675 <Benjamin Kietzman> moving break statements into PP block
37a47ff5b <Benjamin Kietzman> add explicit cast to int
7d2680187 <Benjamin Kietzman> fix format issue
16c9dc709 <Benjamin Kietzman> UnsafeAppendNull() doesn't return Status
27562a2aa <Benjamin Kietzman> ARROW-3793:  TestScalarAppendUnsafe is not testing unsafe appends