cpp/src/arrow/array-test.cc
@@ -1497,25 +1497,28 @@ TEST_F(TestBinaryBuilder, TestScalarAppendUnsafe) {
   vector<uint8_t> is_null = {0, 0, 0, 1, 0};
 
   int N = static_cast<int>(strings.size());
-  int reps = 10;
+  int reps = 13;
+  int total_length = 0;
+  for (auto&& s : strings) total_length += static_cast<int>(s.size());
 
-  ASSERT_OK(builder_->Reserve(5));
-  ASSERT_OK(builder_->ReserveData(6));
+  ASSERT_OK(builder_->Reserve(N * reps));
+  ASSERT_OK(builder_->ReserveData(total_length * reps));
 
   for (int j = 0; j < reps; ++j) {
     for (int i = 0; i < N; ++i) {
       if (is_null[i]) {
-        ASSERT_OK(builder_->AppendNull());
+        builder_->UnsafeAppendNull();
       } else {
         builder_->UnsafeAppend(strings[i]);
       }
     }
   }
+  ASSERT_EQ(builder_->value_data_length(), total_length * reps);
   Done();
   ASSERT_OK(ValidateArray(*result_));
   ASSERT_EQ(reps * N, result_->length());
   ASSERT_EQ(reps, result_->null_count());
-  ASSERT_EQ(reps * 6, result_->value_data()->size());
+  ASSERT_EQ(reps * total_length, result_->value_data()->size());
 
   int32_t length;
   for (int i = 0; i < N * reps; ++i) {
